# antenna

./: .gitignore  README.md  ci.sh  pyproject.toml  tox.ini
.github/workflows/: lint.yml  test.yml
antenna/: antenna.py  main.py
antenna/builder/: xml_builder.py
antenna/config/: build_xml.py
antenna/exception/: no_such_file.py  unsupported_extension.py
antenna/parser/: parse_result.py  parser.py
antenna/projector/: projector.py
antenna/projector/classpath/: classpath.py
antenna/projector/project/: project.py
resource/: build.xml
src/antenna/: antenna.py
src/antenna/parser/: parser.py
