[build-system]
requires = ["hatchling >= 1.26", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "antenna"
description="Antenna is a CLI tool for generating .project and .classpath from build.xml, ant configuration file."
authors=[
    { name = "TlexCypher", email="araki130710@gmail.com" },
]
maintainers=[
    { name = "TlexCypher", email="araki130710@gmail.com" },
]
dynamic = ["version"]
readme="README.md"
requires-python = ">=3.9, <4"
dependencies = []

[dependency-groups]
test = []
lint = ["mypy", "ruff"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 80
indent-width = 4
fixable = ["ALL"]
line-ending = "auto"
exclude = ["venv/*", "tox/*", "examples/*"]

[tool.ruff.lint]
# All the rules are listed on https://docs.astral.sh/ruff/rules/
extend-select = [
  "B", # bugbear
  "I", # isort
  "UP", # pyupgrade, upgrade syntax for newer versions of the language.
]

# B006: Do not use mutable data structures for argument defaults. They are created during function definition time. All calls to the function reuse this one instance of that data structure, persisting changes between them.
# B008 Do not perform function calls in argument defaults.  The call is performed only once at function definition time. All calls to your function will reuse the result of that definition-time function call.  If this is intended, assign the function call to a module-level variable and use that variable as a default value.
ignore = ["B006", "B008"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true 
check_untyped_defs = true
